@@ -114,11 +114,21 @@ void render_Material (struct X3D_Material *node) {
 		do_glMaterialfv(GL_FRONT_AND_BACK, GL_DIFFUSE, dcol);
 
 		amb = node->ambientIntensity;
-/* 		for(i=0; i<3; i++) { */
-                       /* to make this render like Xj3D, make ambient 0 with only headlight */
-                        /* dcol[i] *= amb; */
-/*                         dcol[i] = 0.0; */
-/* 		} */
+
+		/* diffuseColor - Aubrey Jaffer submitted a patch that helps
+		   in his test worlds. It makes conformance checking fail;
+		   I think that what is required is that the distance from
+		   lights needs to be calculated. 
+
+		   The complex lighting equation (not the simplistic description
+		   located around the Material section of the spec) should
+		   be referenced. Sigh. JohnS */
+		#ifndef AUBREY
+ 		for(i=0; i<3; i++) { 
+                         dcol[i] = 0.0;
+ 		} 
+		#endif
+
 		do_glMaterialfv(GL_FRONT_AND_BACK, GL_AMBIENT, dcol);
 
 		for (i=0; i<3;i++){ scol[i] = node->specularColor.c[i]; }
